package com.xinqihd.sns.gameserver.proto;
//
option java_outer_classname = "XinqiBceForgetPassword"; 
message BceForgetPassword {
  required string roleName = 1;
}
